# framelab

./: .gitignore  AGENTS.md  BUILD_AND_RUN.md  CODEX_CONTEXT_WORKFLOW.md  CURRENT_STATE.md  KNOWN_ISSUES.md  LabReport.mplstyle  MERGE_NOTES.md  README.md  REPO_MAP.md  ROADMAP.md  START_HERE.md  TESTING.md  TODO  docs_layout.md  env_dev.yml  env_run.yml  mkdocs.yml  pyside6.py  pytest.ini  requirements-conda.txt  requirements.txt  stylesheets.py
code_assets/: ebus.txt
code_assets/ai_contexts/: cleanup_refactor_brief.txt  documentation_context_handoff.txt
config/: acquisition_field_mapping.json  config.ini  ebus_parameter_catalog.json  plugin_selection.json  preferences.ini
docs/: AGENTS.md  index.md
docs/developer-guide/: architecture.md  datacard-system.md  ebus-config-integration.md  index.md  packaging.md  plugin-system.md  ui-structure.md
docs/development/: change_workflow.md  context_strategy.md  model_reasoning_policy.md  repo_conventions.md  troubleshooting.md
docs/handoffs/: bugfix_handoff_template.md  feature_handoff_template.md  refactor_handoff_template.md  staged_pipeline_refactor_context.md
docs/internal/ai-contexts/: cleanup_refactor_brief.txt
docs/maintenance/: benchmark_workflow.md  tooling_map.md
docs/reference/: acquisition-mapping.md  config-files.md  ebus-parameter-catalog.md  index.md  keyboard-shortcuts.md  plugin-manifests.md
docs/troubleshooting/: index.md
docs/user-guide/: analysis-workflow.md  concepts-and-limits.md  data-workflow.md  index.md  measure-workflow.md  plugin-selector.md  plugins.md  quick-start.md  troubleshooting.md  workflow-structure.md
docs/user-guide/analysis/: event-signature.md  intensity-trend-explorer.md
docs/user-guide/data/: datacard-wizard.md  ebus-config-tools.md  session-manager.md
framelab/: AGENTS.md  __init__.py  __main__.py  acquisition_authoring_dialog.py  acquisition_datacard.py  analysis_context.py  app.py  background.py  byte_budget_cache.py  datacard_labels.py  dataset_state.py  dock_title_bar.py  file_dialogs.py  formatting.py  frame_indexing.py  help_docs.py  icons.py  image_io.py  legacy_compat.py  metadata.py  metadata_inspector_dock.py  metadata_inspector_panel.py  metadata_manager_dialog.py  metadata_state.py  metric_reducers.py  metrics_cache.py  metrics_state.py  models.py  mpl_canvas.py  mpl_config.py  mpl_layout.py  node_metadata.py  payload_utils.py  preferences_dialog.py  processing_failures.py  raw_decode.py  refresh_policy.py  roi_utils.py  runtime_assets.py  runtime_tasks.py  (+15 more)
framelab/assets/: LabReport.mplstyle  acquisition_field_mapping.default.json
framelab/assets/help/: 404.html  AGENTS.html  index.html  sitemap.xml
framelab/datacard_authoring/: __init__.py  mapping.py  models.py  service.py
framelab/ebus/: AGENTS.md  __init__.py  canonical.py  catalog.py  compare.py  dialogs.py  effective.py  models.py  parser.py  sidecar.py
framelab/main_window/: AGENTS.md  __init__.py  analysis.py  chrome.py  data_page.py  dataset_loading.py  inspect_page.py  metrics_runtime.py  window_actions.py
framelab/native/: __init__.py  backend.py  build_helper.py
framelab/plugins/: AGENTS.md  __init__.py  registry.py  selection.py
framelab/workflow/: AGENTS.md  __init__.py  governance_config.py  models.py  profiles.py  state.py
json_templates/: acquisition_datacard.json  camera_profile.json  campaign_datacard.json  session_datacard.json
native/: AGENTS.md  CMakeLists.txt  PYTHON_EXTENSION_BUILD.md  README.md
native/benchmarks/: README.md
native/cmake/toolchains/: mingw-w64-x86_64.cmake
native/include/framelab_native/: api.h
native/include/framelab_native/common/: dispatch.h  pixel_formats.h  roi.h  simd.h  status.h  stride.h  types.h
native/include/framelab_native/decode/: bayer_packed.h  bayer_unpacked.h  decode.h  mono_packed.h  mono_unpacked.h  packed_bits.h
native/include/framelab_native/loaders/: raw_loader.h  raw_source.h  tiff_hook.h
native/include/framelab_native/metrics/: app_metrics.h  background.h  histogram.h  metrics.h  roi_stats.h  stats.h
native/src/api/: py_module.c  python_bridge.c  python_bridge.h
native/src/common/: dispatch.c  pixel_formats.c  roi.c  simd.c  status.c  stride.c
native/src/decode/: bayer_packed.c  bayer_unpacked.c  decode.c  mono_packed.c  mono_unpacked.c  packed_bits.c
native/src/loaders/: file_map.c  file_map.h  raw_loader.c  raw_source.c  tiff_hook.c
native/src/metrics/: app_metrics.c  background.c  fused_metrics.c  histogram.c  raw_metrics.c  roi_stats.c  stats.c  view_utils.h
native/tests/: README.md
native/tools/: fl_metrics_demo.c
sample_data/: README.md  check_samples.py  manifest.csv
sample_data/bg/: synthetic_background_2848x2848_notes.txt
sample_data/raw/: mono12_lsb_scene.raw  mono12_msb_scene.raw  mono12p_scene.raw  mono12p_scene_stride.raw  mono16_scene.raw  mono8_scene.raw
scripts/: tests.py
scripts/docs/: build.py  check.py
tests/: AGENTS.md  conftest.py  test_acquisition_authoring_dialog.py  test_analysis_context.py  test_analysis_page_ui.py  test_analysis_plot_export.py  test_app_startup.py  test_background.py  test_byte_budget_cache.py  test_data_page_ui.py  test_datacard_authoring_mapping.py  test_dataset_loading_async.py  test_dataset_state.py  test_dock_title_bar.py  test_ebus_metadata_resolution.py  test_event_signature_plugin.py  test_file_dialogs.py  test_histogram_widget.py  test_icons.py  test_image_io.py  test_legacy_compat.py  test_measure_page_ui.py  test_metadata_inspector_dock.py  test_metadata_manager_dialog.py  test_metadata_resolution.py  test_metadata_state.py  test_metrics_cache.py  test_metrics_math.py  test_metrics_state.py  test_native_backend.py  test_native_build_helper.py  test_nuitka_build_app.py  test_plugin_registry.py  test_preferences_dialog.py  test_processing_failures.py  test_profile_metrics_backend.py  test_raw_decode.py  test_runtime_assets.py  test_runtime_tasks.py  test_scripts_tests.py  (+14 more)
tools/: AGENTS.md  build_native_backend.py  build_nuitka_app.py  nuitka_build.toml  profile_metrics_backend.py  trace_datacard_wizard_transients.py
(+69 files in other folders)
